libs/zgpu/src/wgpu.zig


pub const RequiredLimits = extern struct {
    next_in_chain: ?*const ChainedStruct = null,
    limits: Limits,
};

pub const SupportedLimits = extern struct {
    next_in_chain: ?*ChainedStructOut = null,
    limits: Limits,
};

pub const QueueDescription = extern struct {
    next_in_chain: ?*const ChainedStruct = null,
    label: ?[*:0]const u8 = null,
};

pub const DeviceDescriptor = extern struct {
    next_in_chain: ?*const ChainedStruct = null,
    label: ?[*:0]const u8 = null,
    required_features_count: u32,
    required_features: ?[*]const FeatureName,
    required_limits: ?[*]const RequiredLimits,
    default_queue: QueueDescription,
};

pub const SurfaceDescriptor = extern struct {
    next_in_chain: ?*const ChainedStruct = null,
    label: ?[*:0]const u8 = null,
};

pub const RequestAdapterOptions = extern struct {
    next_in_chain: ?*const ChainedStruct = null,
    compatible_surface: ?Surface = null,
    power_preference: PowerPreference,
    force_fallback_adapter: bool = false,
};

pub const Adapter = *align(@sizeOf(usize)) AdapterImpl;
pub const BindGroup = *align(@sizeOf(usize)) BindGroupImpl;
pub const BindGroupLayout = *align(@sizeOf(usize)) BindGroupLayoutImpl;
pub const Buffer = *align(@sizeOf(usize)) BufferImpl;
pub const CommandBuffer = *align(@sizeOf(usize)) CommandBufferImpl;
pub const CommandEncoder = *align(@sizeOf(usize)) CommandEncoderImpl;
pub const ComputePassEncoder = *align(@sizeOf(usize)) ComputePassEncoderImpl;
pub const ComputePipeline = *align(@sizeOf(usize)) ComputePipelineImpl;
pub const Device = *align(@sizeOf(usize)) DeviceImpl;
pub const ExternalTexture = *align(@sizeOf(usize)) ExternalTextureImpl;
pub const Instance = *align(@sizeOf(usize)) InstanceImpl;
pub const PipelineLayout = *align(@sizeOf(usize)) PipelineLayoutImpl;
pub const QuerySet = *align(@sizeOf(usize)) QuerySetImpl;
pub const Queue = *align(@sizeOf(usize)) QueueImpl;
pub const RenderBundle = *align(@sizeOf(usize)) RenderBundleImpl;
pub const RenderBundleEncoder = *align(@sizeOf(usize)) RenderBundleEncoderImpl;
pub const RenderPassEncoder = *align(@sizeOf(usize)) RenderPassEncoderImpl;
pub const RenderPipeline = *align(@sizeOf(usize)) RenderPipelineImpl;
pub const Sampler = *align(@sizeOf(usize)) SamplerImpl;
pub const ShaderModule = *align(@sizeOf(usize)) ShaderModuleImpl;
pub const Surface = *align(@sizeOf(usize)) SurfaceImpl;
pub const SwapChain = *align(@sizeOf(usize)) SwapChainImpl;
pub const Texture = *align(@sizeOf(usize)) TextureImpl;
pub const TextureView = *align(@sizeOf(usize)) TextureViewImpl;

pub const CreateComputePipelineAsyncCallback = fn (
    status: CreatePipelineAsyncStatus,
    pipeline: ComputePipeline,
    message: ?[*:0]const u8,
    userdata: ?*anyopaque,
) callconv(.C) void;

pub const CreateRenderPipelineAsyncCallback = fn (
    status: CreatePipelineAsyncStatus,
    pipeline: RenderPipeline,
    message: ?[*:0]const u8,
    userdata: ?*anyopaque,
) callconv(.C) void;

pub const ErrorCallback = fn (
    etype: ErrorType,
    message: ?[*:0]const u8,
    userdata: ?*anyopaque,
) callconv(.C) void;

pub const LoggingCallback = fn (
    etype: LoggingType,
    message: ?[*:0]const u8,
    userdata: ?*anyopaque,
) callconv(.C) void;

pub const DeviceLostCallback = fn (
    reason: DeviceLostReason,
    message: ?[*:0]const u8,
    userdata: ?*anyopaque,
) callconv(.C) void;

pub const RequestAdapterCallback = fn (
    status: RequestAdapterStatus,
    adapter: Adapter,
    message: ?[*:0]const u8,
    userdata: ?*anyopaque,
) callconv(.C) void;

const AdapterImpl = opaque {
    pub fn createDevice(adapter: Adapter, descriptor: DeviceDescriptor) Device {
        return wgpuAdapterCreateDevice(adapter, &descriptor);
    }
    extern fn wgpuAdapterCreateDevice(adapter: Adapter, descriptor: *const DeviceDescriptor) Device;

    pub fn enumerateFeatures(adapter: Adapter, features: ?[*]FeatureName) usize {
        return wgpuAdapterEnumerateFeatures(adapter, features);
    }
    extern fn wgpuAdapterEnumerateFeatures(adapter: Adapter, features: ?[*]FeatureName) usize;

    // TODO: Add functions.
};

const BindGroupImpl = opaque {
    // TODO: Add functions.
};

const BindGroupLayoutImpl = opaque {
    // TODO: Add functions.
};

const BufferImpl = opaque {
    // TODO: Add functions.
};

const CommandBufferImpl = opaque {
    // TODO: Add functions.
};

const CommandEncoderImpl = opaque {
    // TODO: Add functions.
};

const ComputePassEncoderImpl = opaque {
    // TODO: Add functions.
};

const ComputePipelineImpl = opaque {
    // TODO: Add functions.
};

const DeviceImpl = opaque {
    pub fn createBindGroup(device: Device, descriptor: BindGroupDescriptor) BindGroup {
        return wgpuDeviceCreateBindGroup(device, &descriptor);
    }
    extern fn wgpuDeviceCreateBindGroup(device: Device, descriptor: *const BindGroupDescriptor) BindGroup;

    pub fn createBindGroupLayout(device: Device, descriptor: BindGroupLayoutDescriptor) BindGroupLayout {
        return wgpuDeviceCreateBindGroupLayout(device, &descriptor);
    }
    extern fn wgpuDeviceCreateBindGroupLayout(
        device: Device,
        descriptor: *const BindGroupLayoutDescriptor,
    ) BindGroupLayout;

    pub fn createBuffer(device: Device, descriptor: BufferDescriptor) Buffer {
        return wgpuDeviceCreateBuffer(device, &descriptor);
    }
    extern fn wgpuDeviceCreateBuffer(device: Device, descriptor: *const BufferDescriptor) Buffer;

    pub fn createCommandEncoder(device: Device, descriptor: CommandEncoderDescriptor) CommandEncoder {
        return wgpuDeviceCreateCommandEncoder(device, &descriptor);
    }
    extern fn wgpuDeviceCreateCommandEncoder(
        device: Device,
        descriptor: *const CommandEncoderDescriptor,
    ) CommandEncoder;

    pub fn createComputePipeline(device: Device, descriptor: ComputePipelineDescriptor) ComputePipeline {
        return wgpuDeviceCreateComputePipeline(device, &descriptor);
    }
    extern fn wgpuDeviceCreateComputePipeline(
        device: Device,
        descriptor: *const ComputePipelineDescriptor,
    ) ComputePipeline;

    pub fn createComputePipelineAsync(
        device: Device,
        descriptor: ComputePipelineDescriptor,
        callback: CreateComputePipelineAsyncCallback,
        userdata: ?*anyopaque,
    ) void {
        wgpuDeviceCreateComputePipelineAsync(device, &descriptor, callback, userdata);
    }
    extern fn wgpuDeviceCreateComputePipelineAsync(
        device: Device,
        descriptor: *const ComputePipelineDescriptor,
        callback: CreateComputePipelineAsyncCallback,
        userdata: ?*anyopaque,
    ) void;

    pub fn createErrorBuffer(device: Device) Buffer {
        return wgpuDeviceCreateErrorBuffer(device);
    }
    extern fn wgpuDeviceCreateErrorBuffer(device: Device) Buffer;

    pub fn createExternalTexture(device: Device, descriptor: ExternalTextureDescriptor) ExternalTexture {
        return wgpuDeviceCreateExternalTexture(device, &descriptor);
    }
    extern fn wgpuDeviceCreateExternalTexture(
        device: Device,
        descriptor: *const ExternalTextureDescriptor,
    ) ExternalTexture;

    pub fn createPipelineLayout(device: Device, descriptor: PipelineLayoutDescriptor) PipelineLayout {
        return wgpuDeviceCreatePipelineLayout(device, &descriptor);
    }
    extern fn wgpuDeviceCreatePipelineLayout(
        device: Device,
        descriptor: *const PipelineLayoutDescriptor,
    ) PipelineLayout;

    pub fn createQuerySet(device: Device, descriptor: QuerySetDescriptor) QuerySet {
        return wgpuDeviceCreateQuerySet(device, &descriptor);
    }
    extern fn wgpuDeviceCreateQuerySet(device: Device, descriptor: *const QuerySetDescriptor) QuerySet;

    pub fn createRenderBundleEncoder(device: Device, descriptor: RenderBundleEncoderDescriptor) RenderBundleEncoder {
        return wgpuDeviceCreateRenderBundleEncoder(device, &descriptor);
    }
    extern fn wgpuDeviceCreateRenderBundleEncoder(
        device: Device,
        descriptor: *const RenderBundleEncoderDescriptor,
    ) RenderBundleEncoder;

    pub fn createRenderPipeline(device: Device, descriptor: RenderPipelineDescriptor) RenderPipeline {
        return wgpuDeviceCreateRenderPipeline(device, &descriptor);
    }
    extern fn wgpuDeviceCreateRenderPipeline(
        device: Device,
        descriptor: *const RenderPipelineDescriptor,
    ) RenderPipeline;

    pub fn createRenderPipelineAsync(
        device: Device,
        descriptor: RenderPipelineDescriptor,
        callback: CreateRenderPipelineAsyncCallback,
        userdata: ?*anyopaque,
    ) void {
        wgpuDeviceCreateRenderPipelineAsync(device, &descriptor, callback, userdata);
    }
    extern fn wgpuDeviceCreateRenderPipelineAsync(
        device: Device,
        descriptor: *const RenderPipelineDescriptor,
        callback: CreateRenderPipelineAsyncCallback,
        userdata: ?*anyopaque,
    ) void;

    pub fn createSampler(device: Device, descriptor: SamplerDescriptor) Sampler {
        return wgpuDeviceCreateSampler(device, &descriptor);
    }
    extern fn wgpuDeviceCreateSampler(device: Device, descriptor: *const SamplerDescriptor) Sampler;

    pub fn createShaderModule(device: Device, descriptor: SamplerDescriptor) ShaderModule {
        return wgpuDeviceCreateShaderModule(device, &descriptor);
    }
    extern fn wgpuDeviceCreateShaderModule(device: Device, descriptor: *const SamplerDescriptor) ShaderModule;

    pub fn createSwapChain(device: Device, descriptor: SwapChainDescriptor) SwapChain {
        return wgpuDeviceCreateSwapChain(device, &descriptor);
    }
    extern fn wgpuDeviceCreateSwapChain(device: Device, descriptor: *const SwapChainDescriptor) SwapChain;

    pub fn createTexture(device: Device, descriptor: TextureDescriptor) Texture {
        return wgpuDeviceCreateTexture(device, &descriptor);
    }
    extern fn wgpuDeviceCreateTexture(device: Device, descriptor: *const TextureDescriptor) Texture;

    pub fn destroy(device: Device) void {
        wgpuDeviceDestroy(device);
    }
    extern fn wgpuDeviceDestroy(device: Device) void;

    pub fn enumerateFeatures(device: Device, features: ?[*]FeatureName) usize {
        return wgpuDeviceEnumerateFeatures(device, features);
    }
    extern fn wgpuDeviceEnumerateFeatures(device: Device, features: ?[*]FeatureName) usize;

    pub fn getLimits(device: Device, limits: *SupportedLimits) bool {
        return wgpuDeviceGetLimits(device, limits);
    }
    extern fn wgpuDeviceGetLimits(device: Device, limits: *SupportedLimits) bool;

    pub fn getQueue(device: Device) Queue {
        return wgpuDeviceGetQueue(device);
    }
    extern fn wgpuDeviceGetQueue(device: Device) Queue;

    pub fn hasFeature(device: Device, feature: FeatureName) bool {
        return wgpuDeviceHasFeature(device, feature);
    }
    extern fn wgpuDeviceHasFeature(device: Device, feature: FeatureName) bool;

    pub fn injectError(device: Device, etype: ErrorType, message: ?[*:0]const u8) void {
        wgpuDeviceInjectError(device, etype, message);
    }
    extern fn wgpuDeviceInjectError(device: Device, etype: ErrorType, message: ?[*:0]const u8) void;

    pub fn loseForTesting(device: Device) void {
        wgpuDeviceLoseForTesting(device);
    }
    extern fn wgpuDeviceLoseForTesting(device: Device) void;

    pub fn popErrorScope(device: Device, callback: ErrorCallback, userdata: ?*anyopaque) bool {
        return wgpuDevicePopErrorScope(device, callback, userdata);
    }
    extern fn wgpuDevicePopErrorScope(device: Device, callback: ErrorCallback, userdata: ?*anyopaque) bool;

    pub fn pushErrorScope(device: Device, filter: ErrorFilter) void {
        wgpuDevicePushErrorScope(device, filter);
    }
    extern fn wgpuDevicePushErrorScope(device: Device, filter: ErrorFilter) void;
